# mtg-agent

./: .gitignore  README.md  main.py  mtg_agent_old.py  mtgrules_scrape.py  preprocess.py  pyproject.toml
.dvc/: config
data/raw/: .gitignore  mtgrules_dump.json.dvc
data/rules/: .gitignore  dvc.yaml  mtg_rules_20260227.txt.dvc  params.yaml
prompts/: scryfall.md
skills/building-scryfall-query/: SKILL.md
skills/building-scryfall-query/references/: card_text.md  colors.md  format_legality.md  mana.md  mf_cards.md  ptl.md  rarity.md  sets_blocks.md  spe.md
src/mtg_agent/agents/: common.py  synthetic.py
src/mtg_agent/cli/: experiment.py  preprocess.py  training.py
src/mtg_agent/models/: reddit.py
src/mtg_agent/preprocess/: cards.py
src/mtg_agent/utils/: api.py
