[project]
name = "mtg-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.13, <3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "label-studio>=1.23.0",
    "legacy-cgi>=2.6.4",
    "logfire>=4.28.0",
    "mlflow>=3.11.1",
    "pydantic-ai>=1.30.1",
    "pydantic-ai-skills>=0.5.1",
    "pyopenssl==26.0.0",
    "setuptools>=82.0.1",
]
