[project]
name = "mtg-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.13, <3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.2",
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "langchain-text-splitters>=1.1.1",
    "legacy-cgi>=2.6.4",
    "logfire>=4.28.0",
    "mlflow>=3.11.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.30.1",
    "pydantic-ai-skills>=0.5.1",
    "pyopenssl==26.0.0",
    "pyrate-limiter>=4.1.0",
    "setuptools>=82.0.1",
    "tqdm>=4.67.3",
    "transformers==5.5.4",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
preprocess = "mtg_agent.cli.preprocess:cli"
